[package]
name = "prahadlo"
version = "0.1.0"
authors = ["František Kmječ <frantisek.kmjec@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
proj = "0.16.0"
geo-types = "0.5.0"
